<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/sign_in_header"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:gravity="center"
            android:background="@color/colorPrimaryLight"
            android:layout_below="@+id/housemate_list"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/sign_in_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/large_textsize"
                    android:textStyle="bold"
                    android:text="@string/add_yourself"
                    android:nextFocusRight="@+id/sign_in_button"
                    android:nextFocusDown="@+id/housemate_list"/>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    tools:visibility="gone"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_below="@+id/housemate_list"
                    android:contentDescription="@string/action_sign_in"
                    android:nextFocusLeft="@+id/sign_in_msg"
                    android:nextFocusDown="@+id/housemate_list"/>

        </LinearLayout>


        <ListView android:id="@+id/housemate_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"  />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_housemate_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fab_margin_right"
            android:layout_marginEnd="@dimen/fab_margin_right"
            android:layout_marginBottom="@dimen/fab_margin_bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/add_housemate"/>



</RelativeLayout>