<?xml version="1.0" encoding="utf-8"?>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="center_horizontal">

    <android.support.design.widget.AppBarLayout
        android:layout_height="@dimen/appbar_height"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:elevation="@dimen/app_bar_elevation"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="@dimen/expandedTitleMarginStart"
            app:expandedTitleMarginEnd="@dimen/expandedTitleMarginEnd">

        <ImageView
            android:id="@+id/backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:fitsSystemWindows="true"
            app:layout_collapseMode="parallax" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@color/colorPrimary">


            <EditText
                android:id="@+id/billitem_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/billitem_desc"
                android:inputType="text"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:backgroundTint="@android:color/white"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/xlarge_textsize"
                android:nextFocusDown="@+id/billitem_amt">
            </EditText>

            <EditText
                android:id="@+id/billitem_amt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/billitem_amt"
                android:inputType="numberDecimal"
                android:backgroundTint="@android:color/white"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:layout_below="@+id/billitem_desc"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/xlarge_textsize"
                android:nextFocusDown="@+id/billitem_type"
                android:nextFocusUp="@+id/billitem_desc">
            </EditText>
            <Spinner
                android:id="@+id/billitem_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/billitem_amt"
                android:nextFocusDown="@+id/sharing_details"
                android:nextFocusUp="@+id/billitem_amt">
            </Spinner>
        </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />



        </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
            <TextView
                android:id="@+id/sharing_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:text="@string/title_billsharing"
                android:nextFocusDown="@+id/billsharing_list"/>

            <ListView android:id="@+id/billsharing_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>